added endpoint to create manufacturer and get all manufacturers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/vehicle
+spring.datasource.username=root
+spring.datasource.password=Jatin2121@
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
