added controller and required classes to update manufacturer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.password=Jatin2121@
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=true
 
